# fastapi-auth-service

./: .gitignore  README.md  config-example.yaml  config.py  main.py  pyproject.toml
app/: constants.py  dependencies.py  errors.py
app/api/: __init__.py  auth.py  user.py
app/auth/: middleware.py  service.py
app/database/: settings.py
app/database/models/: __init__.py  device.py  token.py  user.py
app/schemas/: __init__.py  device.py  token.py  user.py
