[tool.poetry]
name = "fastapi-auth-service"
version = "0.1.0"
description = ""
authors = ["Artem Shashov <tauquantum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
pydantic-settings-yaml = "^0.2.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
python-multipart = "^0.0.9"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
asyncpg = "^0.29.0"
uvicorn = "^0.28.0"
email-validator = "^2.1.1"
greenlet = "^3.0.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
